# tinderboxwithquarto

./: .gitignore  .nojekyll  README.md  Tinderbox.md  _brand.yml  _common.R  _quarto.yml  _quarto_book.yml  _quarto_html.yml  _quarto_pdf.yml  book-format.html  book-format.qmd  chunks-and-graphs.html  cross-reference-using-ziplink.html  cross-reference-using-ziplink.qmd  example.html  example.qmd  export-and-render.html  export-and-render.qmd  export.html  export.qmd  export_selected_note.scpt  graphviz-optional.html  graphviz-optional.qmd  index.html  index.qmd  make-manuscript-subproject.html  make-manuscript-subproject.qmd  make-notes.html  make-notes.qmd  make-quartoyml-for-the-sub-project.qmd  make-quartoyml.qmd  make-revealjs-subproject.html  make-sub-project-folder.html  make-sub-project-folder.qmd  manuscript-format.qmd  mermaid-flowchart.html  mermaid-flowchart.qmd  output_all.html  output_all.md  (+21 more)
AppleScript/: Preview.scpt  Render.scpt  SelectSingleNote.scpt
Graphviz/: demo-clusters.html  finite-automaton.html  ltail-lhead.html  work-flow-graphviz.html
Mermaid Flowchart/: test-flowchart.html  work-flow-mermaid.html
_bookhtml/: cross-reference-using-ziplink.html  example.html  export-and-render.html  export.html  graphviz-optional.html  index.html  make-manuscript-subproject.html  make-notes.html  make-quartoyml-for-the-sub-project.html  make-quartoyml.html  make-sub-project-folder.html  manuscript-format.html  mermaid-flowchart.html  part-1.html  part-in-book-format.html  references.html  rename-htmlexportfilename-of-a-note-with-translation.html  search.json  (+6 more)
(+235 files in other folders)
